Added recipe for pizza, yum yum

--- a/recipes/babish-pizza.html
+++ b/recipes/babish-pizza.html
@@ -5,7 +5,88 @@
     <title>Babish Pizza</title>
 </head>
 <body>
-    <h1>Babish Pizza!</h1>
     <div><a href="../index.html"><img src="https://cdn-icons-png.flaticon.com/512/60/60817.png" width="30px" alt="home button"></a></div>
+    <h1>Babish Pizza!</h1>
+    <img src="https://images.squarespace-cdn.com/content/v1/59d40133017db2fd8a60b3fe/1518105717162-PFBD6ZPFGKREKM6WKFBG/pizza.png?format=1000w" alt="Pizza made by Babish" width="450px">
+    <h3>Description:</h3>
+    <p>
+        A New York style pizza that would make a Teenage Mutant Ninja Turtle water at the mouth.
+        With homemade dough and pizza sauce, the only thing you'll require is all the ingredients
+        and the effort to make it.
+    </p>
+    <p>
+        So get all the pizza making goodies (listed below), get in touch with your inner Italian
+        and let's get started!
+    </p>
+
+    <h3>Ingredients:</h3>
+    <h4>Pizza dough:</h4>
+    <ul>
+        <li>500g Breaad flour</li>
+        <li>16g salt</li>
+        <li>1g active dry yeast</li>
+        <li>350ml water</li>
+    </ul>
+    <h4>Pizza sauce:</h4>
+    <ul>
+        <li>Extra virgin olive oil</li>
+        <li>Garlic cloves</li>
+        <li>Red pepper flakes</li>
+        <li>Tin of tomatoes</li>
+        <li>Onion powder</li>
+        <li>Oregano</li>
+    </ul>
+    <h4>Other ingredients:</h4>
+    <ul>
+        <li>Mozzarella chees</li>
+        <li>Any toppings of your choice</li>
+    </ul>
+    <h3>Method</h3>
+    <h4>Dough:</h4>
+    <ol>
+        <li>In a medium bowl, thoroughly blend the flour, 
+            active dry yeast, and salt. Add the water and, 
+            with a wooden spoon or your hands, mix thoroughly.</li><br>
+        <li>Cover the bowl with plastic wrap or a kitchen 
+            towel and allow it to rise at room temperature 
+            for 18 hours or until it has more than doubled. 
+            It will take longer in a chilly room and less time 
+            in a very warm one.</li><br>
+        <li>Flour a work surface and scrape out the dough. 
+            Divide it into 4 equal parts and shape them. 
+            For each portion, start with the right side of the 
+            dough and pull it towards the center; then do the 
+            same with the left, then the top, then the bottom 
+            (the order doesn’t actually matter; what you want is 
+            four folds). Shape each portion into a round and turn 
+            seam side down. Mold the dough into a neat circular mound. 
+            The mounds should not be sticky; if they are, dust with more flour.</li><br>
+            <li>If you don’t intend to use the dough right away, wrap 
+                the balls individually in plastic and refrigerate for 
+                up to 3 days. Return to room temperature by leaving 
+                them out on the counter, covered in a damp cloth, for 
+                2 to 3 hours before needed.</li>
+    </ol>
+    <h4>Pizza Sauce:</h4>
+    <ol>
+        <li>Start by heating olive oil in a pan over medium heat. 
+            Then add some roughly cut garlic and saute for one minute. 
+            Add some red pepper flakes and let those cook for about 10-15 seconds.</li><br>
+        <li>Add a 28-ounce can of whole San Marzano tomatoes. Stir in and lightly 
+            break up the tomatoes. Add some dry onion powder along with some dry oregano, 
+            stir to combine and let simmer for 30-45 minutes. </li><br>
+        <li>Add sauce to a blender and puree for about 10-15 seconds. </li>
+    </ol>
+    <h4>Pizza Assembly:</h4>
+    <ol>
+        <li>Slowly start to pat the dough down into the general shape of a pizza. 
+            Don’t roll it out with a rolling pin. Once the dough had grown in size, 
+            pass over your knuckles and slowly start to spread it out until a pizza
+            pie shape is formed. </li><br>
+        <li>Add your sauce and low moisture mozzarella along with whatever toppings 
+            you’d like and place on your pizza stone in your preheated 500°F oven 
+            (pre-heat for 1 hour). Bake for 7-9 minutes. </li><br>
+        <li>Let cool for a few minutes. Serve and enjoy.</li>
+    </ol>
 </body>
 </html>
