--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes!</h1>
-
-    <p><a href="recipes/babish-pizza.html">Babish pizza</a></p>
+    <ul>
+        <li><a href="recipes/babish-pizza.html">Babish pizza</a></li>
+    </ul>
 </body>
 </html>
