2 more recipes added and changed index to list for better eye viewing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>Odin Recipes!</h1>
     <ul>
         <li><a href="recipes/babish-pizza.html">Babish pizza</a></li>
+        <li><a href="recipes/seans-chilli.html">Sean's chilli</a></li>
+        <li><a href="recipes/curries-curry.html">Currie's Curry</a></li>
     </ul>
 </body>
 </html>
